[project]
name = "PyForumTp2"
version = "0.1.0"
description = "Projet de forum en Python"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
  { name = "Eva Terriault", email = "eterriault@cmaisonneuve.qc.ca" },
  { name = "Vincent Archambault-B", email = "varchambaultbouffard@cmaisonneuve.qc.ca" },
]
dependencies = [
  # Add runtime dependencies here, for example:
  # "requests>=2.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/archambaultv-prof/2025H-420-2C3-MA-Pyforum-tp2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
